--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <li class="li-navbar">
         <a href="perhitungan kebutuhan ac.html" class="a-navbar">PERHITUNGAN KEBUTUHAN AC</a>
     </li>
-    <li class="li-navbar">ABOUT</li>
+    <li class="li-navbar">
+        <a href="LIBRARY.html" class="a-navbar">LIBRARY</a>
+    </li>
     </ul>
     </div>
     <div class="container-content">
