--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <a href="perhitungan kebutuhan ac.html" class="a-navbar">PERHITUNGAN KEBUTUHAN AC</a>
     </li>
     <li class="li-navbar">
+        <a href="perhitungan kebutuhan air bersih.html" class="a-navbar">PERHITUNGAN KEBUTUHAN AIR BERSIH</a>
+    </li>
+    <li class="li-navbar">
         <a href="LIBRARY.html" class="a-navbar">LIBRARY</a>
     </li>
     </ul>
